# rate-my-pulls

./: .containerignore  .dockerignore  .gitignore  COPYING  Containerfile  Dockerfile  README.md  env.default  fly.toml  go.mod  go.sum  pyproject.toml  rate-my-pulls.cabal  rmp.py
.github/workflows/: ci.yaml  images.yaml
api/: fly.toml  go.mod  go.sum  main.go
cmd/rmp/: main.go
rmp/: Api.hs  Main.hs  Pull.hs
web/: build.js  elm.json  index.js  package-lock.json  package.json  rollup.config.js  styles.scss
web/public/: index.html
web/public/styles/: styles.css
web/src/: Main.elm  Queries.elm
web/src/GitHub/: InputObject.elm  Mutation.elm  Object.elm  Union.elm
web/src/GitHub/Enum/: IssueTimelineItemsItemType.elm  LabelOrderField.elm  PullRequestTimelineItemsItemType.elm
web/src/GitHub/Interface/: Actor.elm  Assignable.elm  AuditEntry.elm  Comment.elm  Contribution.elm  GitObject.elm  GitSignature.elm  Labelable.elm  MemberStatusable.elm  Node.elm  OrganizationAuditEntryData.elm  ProfileOwner.elm  ProjectOwner.elm  Reactable.elm  RegistryPackageOwner.elm  RegistryPackageSearch.elm  RepositoryAuditEntryData.elm  RepositoryInfo.elm  RepositoryNode.elm  RepositoryOwner.elm  Sponsorable.elm  Starrable.elm  TeamAuditEntryData.elm  TopicAuditEntryData.elm  UniformResourceLocatable.elm
web/src/GitHub/Object/: ConnectedEvent.elm  Deployment.elm  DisconnectedEvent.elm  EnterpriseUserAccount.elm  Issue.elm  LockLockablePayload.elm  MergePullRequestPayload.elm  PullRequest.elm  Repository.elm  RepositoryVulnerabilityAlert.elm  RequestReviewsPayload.elm  SponsorsListing.elm  Sponsorship.elm  UnlockLockablePayload.elm  UnmarkedAsDuplicateEvent.elm  UpdateIssuePayload.elm  UpdatePullRequestPayload.elm
web/src/GitHub/Union/: PullRequestTimelineItems.elm
web/styles/: COPYING  PressStart2P.scss  _index.scss  body.scss  footer.scss  header.scss  styles.scss
web/styles/base/: generic.scss  variables.scss
web/styles/components/: _index.scss  header.scss
