[tool.poetry]
name = "rmp"
version = "0.1.0"
description = ""
authors = ["Ananth <rate-my-pulls@kedi.dev>"]
readme = "README.md"

[tool.poetry.scripts]
rmp = "rmp:main"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
starlette-cramjam = "^0.3.0"
starlette-prometheus = "^0.9.0"
gql = {extras = ["all"], version = "^3.4.0"}
aiohttp-oauthlib = "^0.1.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
starsessions = {extras = ["redis"], version = "^2.0.1"}


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
ruff = "^0.0.25"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
